<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:orientation="vertical"
    >

    <!-- tools:context="com.example.usuario.app_horarios.FragmentAjustes"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/modificar_datos_usu"
        android:textColor="@color/colorAccent"
        android:textSize="30dp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:id="@+id/textNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/modifica_nombre"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

            <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/edit_nombre"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/darker_gray"
        android:ems="10"
        android:hint="@string/edit_apellidos"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textRestaurante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/modifica_restaurante"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />
    <Spinner
        android:id="@+id/spinnerRestaurante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:entries="@array/restaurantes_array" />
    <TextView
        android:id="@+id/textContrasenya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/modifica_contrasenya"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/editContrasenya1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/contrasenya_antigua"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />


    <EditText
        android:id="@+id/editContasenya2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/contrasenya_nueva"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textPersonName"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/button_update" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:text="@string/button_logout" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
