<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.usuario.app_horarios.MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:srcCompat="@drawable/logoapp" />

    <TextView
        android:id="@+id/textView_nuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_aplicacion"
        android:textColor="@android:color/background_light"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:background="@color/colorAccent"
        android:layout_margin="20dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/textView_viejo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_nada"
        android:textColor="@android:color/background_light"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesion"
        android:background="@color/colorAccent"
        android:layout_margin="20dp"
        android:textSize="20dp"/>

</LinearLayout>
