<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <!--Poner ToolBar con flecha para subir un nivel-->

    <TextView
        android:id="@+id/textIniciaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inicia_sesion"
        android:textColor="@color/colorAccent"
        android:textSize="35dp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduce_email"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black"
        android:ems="10"
        android:textColor="@android:color/white"
        android:inputType="textPersonName"
        android:hint="@string/email"
        />


    <TextView
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/introduce_password"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button_iniciar_sesion_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorAccent"
        android:textSize="20dp"
        android:text="@string/inicia_sesion" />
</LinearLayout>