<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                app:srcCompat="@drawable/logoapp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/intro_datos"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28dp" />


            <EditText
                android:id="@+id/editNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/grey_hint"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/edit_nombre"
                android:inputType="textPersonName"
                 />
            <EditText
                android:id="@+id/editApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/grey_hint"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/edit_apellidos"
                android:inputType="textPersonName"
                 />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/actualiza_contrasenya"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/editPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/grey_hint"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                 />
            <EditText
                android:id="@+id/editPassword3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/grey_hint"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/edit_password2"
                android:inputType="textPassword"
                 />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/restaurante"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25dp" />

                <Spinner
                    android:id="@+id/spinnerRestaurante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_weight="1"
                    android:entries="@array/restaurantes_array" />


            </LinearLayout>

            <EditText
                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/grey_hint"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/start_date"
                android:inputType="textPersonName"
                />

            <Button
                android:id="@+id/buttonRegistro"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/registrate"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>